crates/bitnet-kernels/tests/snapshots/snapshot_wave14__dequant_snapshots__dequant_i2s_block_insufficient_bytes_error.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 174
expression: err.to_string()
---
Kernel error: Invalid arguments: dequant_i2s_block: need 2 bytes for block_size=8, got 1
