crates/bitnet-kernels/tests/snapshots/snapshot_wave14__dequant_snapshots__dequant_i2s_block_mixed_values.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 143
expression: result
---
[
    2.0,
    -2.0,
    0.0,
    2.0,
]
