crates/bitnet-kernels/tests/snapshots/snapshot_wave14__dequant_snapshots__dequant_i2s_row_insufficient_scales_error.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 186
expression: err.to_string()
---
Kernel error: Invalid arguments: dequant_i2s_row: need 4 scales for 16 elements (block_size=4), got 2
