crates/bitnet-kernels/tests/snapshots/snapshot_wave14__dequant_snapshots__dequant_i2s_row_multi_block.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 158
expression: result
---
[
    2.0,
    -2.0,
    0.0,
    2.0,
    -3.0,
    3.0,
    3.0,
    0.0,
]
