crates/bitnet-kernels/tests/snapshots/snapshot_wave14__dequant_snapshots__dequant_i2s_row_zero_block_size_error.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 180
expression: err.to_string()
---
Kernel error: Invalid arguments: dequant_i2s_row: block_size must be > 0
