crates/bitnet-kernels/tests/snapshots/snapshot_wave14__dequant_snapshots__dequant_ternary_two_bytes.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 150
expression: result
---
[
    1.5,
    -1.5,
    0.0,
    1.5,
    -1.5,
    0.0,
    -1.5,
    1.5,
]
