crates/bitnet-kernels/tests/snapshots/snapshot_wave14__dequant_snapshots__packed_bytes.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 166
expression: "&packed"
---
[
    77,
    3,
]
