crates/bitnet-kernels/tests/snapshots/snapshot_wave14__dequant_snapshots__round_trip_values.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 168
expression: "&deq"
---
[
    0.97499996,
    -0.97499996,
    0.0,
    0.97499996,
    -0.97499996,
    0.0,
    0.0,
    0.0,
]
