crates/bitnet-kernels/tests/snapshots/snapshot_wave14__dequant_snapshots__scale.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave14.rs
assertion_line: 167
expression: "format!(\"{scale:.6}\")"
---
0.975000
